--- a/src/css/base.css
+++ b/src/css/base.css
@@ -14,18 +14,11 @@
 }
 
 body {
-  display: flex;
-  flex-direction: column;
+  background-color: #fbfbfb;
   min-width: 100vw;
   min-height: 100vh;
   margin: 0;
-}
-
-main {
-  flex-grow: 1;
-}
-main:has(.back-link) {
-  text-align: center;
+  color: #0c0c0c;
 }
 
 .visually-hidden {
