--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <header class="header">
   <div class="container">
-    <img src="../img/advertisement/advertisement-desk-bg-min.png" alt="test" />
+    <img src="./img/advertisement/advertisement-desk-bg-min.png" alt="test" />
   </div>
 </header>
