--- a/src/css/container.css
+++ b/src/css/container.css
@@ -8,12 +8,18 @@
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
   .container {
+    max-width: 768px;
+    padding: 0 32px;
   }
 }
 /* Styles for Desktop devices */
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1280px) {
   .container {
+    max-width: 1280px;
+    padding: 0 65px;
   }
   .footer .container {
+    max-width: 1280px;
+    padding: 0 32px;
   }
 }
