--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -47,8 +47,10 @@
       <li class="reviews-list-item three">
         <img
           class="reviews-foto"
-          srcset="./img/reviews/rewiews-3-min.png    1x,
-            ./img/reviews/rewiews-3@2x-min.png 2xx"
+          srcset="
+            ./img/reviews/rewiews-3-min.png    1x,
+            ./img/reviews/rewiews-3@2x-min.png 2x
+          "
           src="./img/reviews/rewiews-3-min.png"
           alt="reviewer-three"
           width="56"
