--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,67 @@
-<header class="header">
-  <div class="container"></div>
+<header class="top-header">
+  <div class="container header-container">
+    <a href="./index.html" class="header-logo">watchcharm</a>
+    <nav class="nav">
+      <ul class="header-menu">
+        <li class="header-menu-nav">
+          <a href="./index.html " class="menu-list-nav current">Home</a>
+        </li>
+        <li class="header-menu-nav">
+          <a href="" class="menu-list-nav current">About Us</a>
+        </li>
+        <li class="header-menu-nav">
+          <a href="" class="menu-list-nav current">Catalog</a>
+        </li>
+        <li class="header-menu-nav">
+          <a href="" class="menu-list-nav current">Sale</a>
+        </li>
+        <li class="header-menu-nav">
+          <a href="" class="menu-list-nav current">Reviews</a>
+        </li>
+        <li class="header-menu-nav">
+          <a href="" class="menu-list-nav current">Contact Us</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="menu-soclinks">
+      <ul class="social-link">
+        <li class="soc-list">
+          <a
+            href="https://www.facebook.com/goITclub//"
+            target="_blank"
+            class="icons-link"
+            ><svg class="icons" width="20" height="20">
+              <use href="./img/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="soc-list">
+          <a
+            href="https://www.instagram.com/goitclub//"
+            target="_blank"
+            class="icons-link"
+            ><svg class="icons" width="20" height="20">
+              <use href="./img/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="soc-list">
+          <a
+            href="https://www.youtube.com/c/GoIT/"
+            target="_blank"
+            class="icons-link"
+            ><svg class="icons" width="20" height="20">
+              <use href="../img/icons.svg#icon-youtube"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <button type="button" class="mob-menu">
+      <svg class="burger-icon">
+        <use href="./img/icons.svg#icon-menu"></use>
+      </svg>
+    </button>
+  </div>
+  <div class="header-line"></div>
 </header>
