--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -1,4 +1,4 @@
-.reviews {
+.reviews-section {
   padding-bottom: 60px;
 }
 
@@ -71,7 +71,7 @@
 
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
-  .reviews {
+  .reviews-section {
     padding-bottom: 80px;
   }
   .reviews-title {
@@ -103,7 +103,7 @@
 }
 /* Styles for Desktop devices */
 @media only screen and (min-width: 1280px) {
-  .reviews {
+  .reviews-section {
     padding-bottom: 100px;
   }
   .reviews-list {
