--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  padding: 30px 0 20px;
+  padding-bottom: 20px;
 }
 
 .footer .container {
@@ -51,6 +51,7 @@
 .footer-soc-icon {
   fill: #fbfbfb;
   opacity: 0.8;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-contact {
@@ -63,6 +64,12 @@
   width: 152px;
   height: 44px;
   margin-bottom: 40px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-contact:hover,
+.footer-contact:focus {
+  border: 1px solid rgba(251, 251, 251, 1);
 }
 
 .footer-contact-tel {
@@ -108,6 +115,31 @@
 }
 
 .footer-navigations-link {
+  position: relative;
+  display: block;
+}
+
+.footer-navigations-link::after,
+.footer-navigations-link::after {
+  content: '';
+  width: 8px;
+  height: 8px;
+  background-color: #3350e9;
+  border-radius: 50%;
+  position: absolute;
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-50%) scale(0);
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-navigations-link:hover::after,
+.footer-navigations-link:focus::after {
+  transform: translateX(-50%) scale(1);
+  opacity: 1;
+  bottom: -10px;
 }
 
 .footer-navigation-text {
@@ -135,11 +167,17 @@
 }
 
 .footer-bottom-link {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-bottom-link:hover,
+.footer-bottom-link:focus {
+  color: rgba(251, 251, 251, 1);
 }
 
 @media screen and (min-width: 768px) {
   .footer {
-    padding: 40px 0 32px;
+    padding-bottom: 32px;
   }
 
   .footer-wrap {
@@ -222,10 +260,6 @@
 }
 
 @media only screen and (min-width: 1280px) {
-  .footer {
-    padding: 50px 0 32px;
-  }
-
   .footer-top-wrap {
     row-gap: unset;
     margin-bottom: 126px;
