--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -51,22 +51,24 @@
         <nav class="footer-navigation">
           <ul class="footer-navigation-list">
             <li class="footer-navigations-item">
-              <a class="footer-navigations-link" href="">Home</a>
+              <a class="footer-navigations-link" href="#hero">Home</a>
             </li>
             <li class="footer-navigations-item">
-              <a class="footer-navigations-link" href="">About Us</a>
+              <a class="footer-navigations-link" href="#about">About Us</a>
             </li>
             <li class="footer-navigations-item">
-              <a class="footer-navigations-link" href="">Catalog</a>
+              <a class="footer-navigations-link" href="#catalog">Catalog</a>
             </li>
             <li class="footer-navigations-item">
-              <a class="footer-navigations-link" href="">Sale</a>
+              <a class="footer-navigations-link" href="#sale">Sale</a>
             </li>
             <li class="footer-navigations-item">
-              <a class="footer-navigations-link" href="">Reviews</a>
+              <a class="footer-navigations-link" href="#reviews">Reviews</a>
             </li>
             <li class="footer-navigations-item">
-              <a class="footer-navigations-link" href="">Contact Us</a>
+              <a class="footer-navigations-link" href="#contact-us"
+                >Contact Us</a
+              >
             </li>
           </ul>
         </nav>
