add advertisement html_css

--- a/src/partials/advertisement.html
+++ b/src/partials/advertisement.html
@@ -1,3 +1,15 @@
-<section class="advertisement">
-  <div class="container"></div>
+<section id="advertisement" class="advertisement">
+  <h2 class="visually-hidden">Hero</h2>
+  <div class="container">
+    <div class="advertisement-wrapper">
+      <h3 class="advertisement-title">
+        Choose <span class="accent">your story</span>, making every moment
+        unique. Time is your style, and we reveal it.
+      </h3>
+
+      <div class="advertisement-buttons">
+        <a href="#contact-us" class="advertisement-btn">Contact Us</a>
+      </div>
+    </div>
+  </div>
 </section>
