--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -50,23 +50,23 @@
       <div class="footer-navigation-wrap">
         <nav class="footer-navigation">
           <ul class="footer-navigation-list">
-            <li class="footer-navigations-item">
-              <a class="footer-navigations-link" href="#hero">Home</a>
+            <li class="footer-navigation-item">
+              <a class="footer-navigation-link" href="#hero">Home</a>
             </li>
-            <li class="footer-navigations-item">
-              <a class="footer-navigations-link" href="#about">About Us</a>
+            <li class="footer-navigation-item">
+              <a class="footer-navigation-link" href="#about">About Us</a>
             </li>
-            <li class="footer-navigations-item">
-              <a class="footer-navigations-link" href="#catalog">Catalog</a>
+            <li class="footer-navigation-item">
+              <a class="footer-navigation-link" href="#catalog">Catalog</a>
             </li>
-            <li class="footer-navigations-item">
-              <a class="footer-navigations-link" href="#sale">Sale</a>
+            <li class="footer-navigation-item">
+              <a class="footer-navigation-link" href="#sale">Sale</a>
             </li>
-            <li class="footer-navigations-item">
-              <a class="footer-navigations-link" href="#reviews">Reviews</a>
+            <li class="footer-navigation-item">
+              <a class="footer-navigation-link" href="#reviews">Reviews</a>
             </li>
-            <li class="footer-navigations-item">
-              <a class="footer-navigations-link" href="#contact-us"
+            <li class="footer-navigation-item">
+              <a class="footer-navigation-link" href="#contact-us"
                 >Contact Us</a
               >
             </li>
