--- a/src/partials/sale.html
+++ b/src/partials/sale.html
@@ -1,4 +1,4 @@
-<section class="sale-section">
+<section id="sale" class="sale-section">
   <div class="container">
     <h2 class="sale-header">Sale</h2>
     <div class="sale-container">
@@ -25,7 +25,7 @@
                   ./img/sale/sale-mob-1-min.png    1x,
                   ./img/sale/sale-mob-1@2x-min.png 2x
                 "
-                media="(min-width: 375px)"
+                media="(max-width: 767px)"
               />
               <img
                 class="sale-sbc-one-list-item-img"
@@ -55,7 +55,7 @@
                   ./img/sale/sale-mob-2-min.png    1x,
                   ./img/sale/sale-mob-2@2x-min.png 2x
                 "
-                media="(min-width: 375px)"
+                media="(max-width: 767px)"
               />
               <img
                 class="sale-sbc-one-list-item-img"
@@ -85,7 +85,7 @@
                   ./img/sale/sale-mob-3-min.png    1x,
                   ./img/sale/sale-mob-3@2x-min.png 2x
                 "
-                media="(min-width: 375px)"
+                media="(max-width: 767px)"
               />
               <img
                 class="sale-sbc-one-list-item-img"
@@ -115,7 +115,7 @@
                   ./img/sale/sale-mob-4-min.png    1x,
                   ./img/sale/sale-mob-4@2x-min.png 2x
                 "
-                media="(min-width: 375px)"
+                media="(max-width: 767px)"
               />
               <img
                 class="sale-sbc-one-list-item-img"
@@ -147,7 +147,7 @@
               ./img/sale/sale-mob-5-min.png    1x,
               ./img/sale/sale-mob-5@2x-min.png 2x
             "
-            media="(min-width: 375px)"
+            media="(max-width: 767px)"
           />
           <img
             class="sale-sbc-two-img"
