--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -10,7 +10,7 @@
       <p class="about-text">At our premium watch collection, we believe that a watch is more than just a timekeeping device - it's a statement piece that reflects your personality and style. So why settle for anything less than the best? </p>
     </li>
     </ul>
-  <a href="#catalog" class="about-btn" type="button">View catalog</a>
+  <a href="#catalog" class="about-btn">View catalog</a>
 </div>
 <div class="about-image">
  <picture>
