hero second edition

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,6 +1,7 @@
 /* hero */
 .hero-wrapper-div{
     padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .hero-header{
@@ -47,7 +48,8 @@
   
 }
 
-.hero-link:hover{
+.hero-link:hover,
+.hero-link:focus{
   color: #3350e9;
   transition: color 0.3s ease-in-out;
 
@@ -67,7 +69,7 @@
     border-radius: 100%;
     stroke-width: 2px;
     stroke: var(--background);
-    background: rgba(12, 12, 12, 0.2), url("path_to_image");
+    background: rgba(12, 12, 12, 0.2);
     width: 44px;
     height: 44px;
 }
@@ -78,11 +80,7 @@
 }
 
 @media only screen and (min-width: 768px){
-    .container{
-        max-width: 1199px;
-        margin: 0 auto;
-        padding: 0 32px;
-    }
+ 
     
 
     .hero-wrapper-div{
@@ -90,7 +88,7 @@
         flex-wrap: wrap;
         justify-content: space-between;
        
-        padding-bottom: 40px;
+        padding-bottom: 80px;
         padding-top: 80px;
 
     }
@@ -115,7 +113,7 @@
    line-height: 125%;
    }
 
-   
+
    .hero-list-item-img{
     width: 56px;
     height: 56px;
@@ -135,11 +133,13 @@
     }
 }
 
-@media only screen and (min-width: 1200px) {
-    .container {
-        padding: 0 65px;
-    }
+@media only screen and (min-width: 1280px) {
 
+    .hero-wrapper-div{
+        padding-bottom: 100px;
+       
+    }
+  
     .hero-wrapper-div-first{
         max-width: 597px;
     }
