--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -38,7 +38,7 @@
                         width="44"
                         height="44"
                         srcset="./img/reviews/rewiews-3-min.png 1x, 
-                        ../img/reviews/rewiews-3@2x-min.png 2x">    
+                        ./img/reviews/rewiews-3@2x-min.png 2x">    
     
                     </li>
                 </ul>
