--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -29,10 +29,14 @@
    ./img/about/about-mob@2x-min.jpg 2x"
    />
 
+   <source media="(max-width: 375px)"
+   srcset="./img/about/about-mob-min.jpg 1x,
+   ./img/about/about-mob@2x-min.jpg 2x"
+   />
+
    <img
    src="./img/about/about-desk-min.jpg"
    alt="watch front view"
-   width="530"
    class="about-img"
  />
 </picture>
