--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,3 +1,8 @@
+
+
+
+
+
 .about {
    padding-bottom: 60px; 
    margin: 0 auto;
@@ -73,7 +78,7 @@ flex-wrap: wrap;
 flex-direction: column;
 gap: 20px;
 }
-
+    
 
 
 @media only screen and (min-width: 768px) {
@@ -100,13 +105,14 @@ gap: 20px;
     margin-bottom: 40px;
 }
 
+
 .about-text {
 font-size: 16px;
 line-height: 1.25;
 }
 
-.about-btn {
-margin-top: 40px;
+ .about-list {
+    margin-bottom: 60px;
 }
 
 .about-container{
@@ -127,6 +133,11 @@ margin-top: 40px;
      
      }
   
+
+    .about-wrapper {
+        max-width: 580px;
+    }
+
 .about-container {
     flex-direction: row;
     flex-wrap: nowrap;
@@ -151,6 +162,10 @@ color: #0c0c0c;
  font-weight: 500;
 font-size: 16px;
 line-height: 1.25;
+}
+
+.about-list {
+    margin-bottom: 40px;
 }
 
 }
