margin,padding,transition

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section id="hero">
+<section id="hero" class="hero-section">
     <div class="container">
         <div class="hero-wrapper-div">
             <div class="hero-wrapper-div-first">
