--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,9 +1,11 @@
 /* hero */
-.hero-wrapper-div{
+.hero-section{
     padding-top: 60px;
     padding-bottom: 60px;
 }
-
+.hero-wrapper-div{
+    margin-bottom: 60px;
+}
 .hero-header{
   
   font-weight: 600;
@@ -11,7 +13,7 @@
   line-height: 95%;
   letter-spacing: -0.02em;
   color: #0c0c0c;
-  padding-bottom: 20px;
+  margin-bottom: 20px;
 }
 .hero-span{
   color: #3350e9;
@@ -29,8 +31,8 @@
 .hero-wrapper-div-second{
   display: flex;
   justify-content: space-between;
-  padding-top: 20px;
-  padding-bottom: 28px;
+  margin-top: 20px;
+  margin-bottom: 28px;
   align-items:flex-end ;
 }
 
@@ -45,13 +47,14 @@
   text-decoration: underline;
   text-decoration-skip-ink: none;
   color: #0c0c0c;
+  transition: 250ms cubic-bezier(0.4,0.2,1);
   
 }
 
 .hero-link:hover,
 .hero-link:focus{
   color: #3350e9;
-  transition: color 0.3s ease-in-out;
+
 
 }
 
@@ -66,7 +69,7 @@
 }
 
 .hero-list-item-img{
-    border-radius: 100%;
+    border-radius: 50%;
     stroke-width: 2px;
     stroke: var(--background);
     background: rgba(12, 12, 12, 0.2);
@@ -80,32 +83,31 @@
 }
 
 @media only screen and (min-width: 768px){
- 
+    .hero-section{
+
+        padding-bottom: 40px;
+        padding-top: 80px;
+
+    }
     
 
     .hero-wrapper-div{
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
-       
-        padding-bottom: 80px;
-        padding-top: 80px;
-
     }
     .hero-wrapper-div-first{
         max-width: 557px;
     }
    .hero-wrapper-div-second{
     flex-direction: column;
-    padding-top: 0px;
-    padding-bottom: 0px;
+    margin-top: 0px;
+    margin-bottom: 0px;
    }
 
    .hero-header{
    font-size: 70px;
    line-height: 86%;
-  
-
    }
 
    .hero-p{
@@ -135,7 +137,7 @@
 
 @media only screen and (min-width: 1280px) {
 
-    .hero-wrapper-div{
+    .hero-section{
         padding-bottom: 100px;
        
     }
