--- a/src/css/base.css
+++ b/src/css/base.css
@@ -15,8 +15,8 @@
 
 body {
   background-color: #fbfbfb;
-  min-width: 100vw;
-  min-height: 100vh;
+  /* min-width: 100vw;
+  min-height: 100vh; */
   margin: 0;
   color: #0c0c0c;
 }
