first fix code-ua

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,67 +1,66 @@
-<header class="top-header">
+<header class="header">
   <div class="container header-container">
-    <a href="./index.html" class="header-logo">watchcharm</a>
-    <nav class="nav">
-      <ul class="header-menu">
-        <li class="header-menu-nav">
-          <a href="./index.html " class="menu-list-nav current">Home</a>
+    <a href="./index.html" class="header-link-logo">watchcharm</a>
+    <nav class="header-nav">
+      <ul class="header-list">
+        <li class="header-list-item">
+          <a href="#hero" class="header-link">Home</a>
         </li>
-        <li class="header-menu-nav">
-          <a href="" class="menu-list-nav current">About Us</a>
+        <li class="header-list-item">
+          <a href="#about" class="header-link">About Us</a>
         </li>
-        <li class="header-menu-nav">
-          <a href="" class="menu-list-nav current">Catalog</a>
+        <li class="header-list-item">
+          <a href="#catalog" class="header-link">Catalog</a>
         </li>
-        <li class="header-menu-nav">
-          <a href="" class="menu-list-nav current">Sale</a>
+        <li class="header-list-item">
+          <a href="#sale" class="header-link">Sale</a>
         </li>
-        <li class="header-menu-nav">
-          <a href="" class="menu-list-nav current">Reviews</a>
+        <li class="header-list-item">
+          <a href="#reviews" class="header-link">Reviews</a>
         </li>
-        <li class="header-menu-nav">
-          <a href="" class="menu-list-nav current">Contact Us</a>
+        <li class="header-list-item">
+          <a href="#contact-us" class="header-link">Contact Us</a>
         </li>
       </ul>
     </nav>
-    <div class="menu-soclinks">
-      <ul class="social-link">
-        <li class="soc-list">
+    <div class="header-menu-soclinks">
+      <ul class="header-social-list">
+        <li class="header-soc-list-item">
           <a
-            href="https://www.facebook.com/goITclub//"
+            href="https://www.facebook.com/goITclub/"
             target="_blank"
-            class="icons-link"
-            ><svg class="icons" width="20" height="20">
+            class="header-icons-item"
+            ><svg class="header-soc-icons" width="20" height="20">
               <use href="./img/icons.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
-        <li class="soc-list">
+        <li class="header-soc-list-item">
           <a
-            href="https://www.instagram.com/goitclub//"
+            href="https://www.instagram.com/goitclub/"
             target="_blank"
-            class="icons-link"
-            ><svg class="icons" width="20" height="20">
+            class="header-icons-item"
+            ><svg class="header-soc-icons" width="20" height="20">
               <use href="./img/icons.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
-        <li class="soc-list">
+        <li class="header-soc-list-item">
           <a
             href="https://www.youtube.com/c/GoIT/"
             target="_blank"
-            class="icons-link"
-            ><svg class="icons" width="20" height="20">
+            class="header-icons-item"
+            ><svg class="header-soc-icons" width="20" height="20">
               <use href="../img/icons.svg#icon-youtube"></use>
             </svg>
           </a>
         </li>
       </ul>
     </div>
-    <button type="button" class="mob-menu">
-      <svg class="burger-icon">
+    <button type="button" class="header-mob-menu">
+      <svg class="header-burger-icon">
         <use href="./img/icons.svg#icon-menu"></use>
       </svg>
     </button>
   </div>
-  <div class="header-line"></div>
 </header>
