--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,31 +1,23 @@
-.container {
-  min-width: 320px;
-  max-width: 375px;
-  margin: 0 auto;
-  padding: 0 20px;
-}
-
 .header-container {
-  padding-top: 20px;
-  padding-bottom: 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.header-line {
-  height: 1px;
-  background-color: rgba(12, 12, 12, 0.1);
-  width: 100%;
+
+.header {
+  border-bottom: 1px solid rgba(12, 12, 12, 0.1);
 }
 
-.mob-menu {
+.header-mob-menu {
   display: flex;
   align-items: center;
   background-color: transparent;
   border: none;
+  padding-top: 20px;
+  padding-bottom: 19px;
 }
 
-.burger-icon {
+.header-burger-icon {
   width: 34px;
   height: 34px;
 }
@@ -35,112 +27,111 @@
   stroke: #0c0c0c;
 }
 
-.header-logo {
+.header-link-logo {
   font-family: 'Gilroy', sans-serif;
   font-weight: 500;
   font-size: 16px;
   letter-spacing: -0.02em;
   color: #0c0c0c;
+  padding-top: 27px;
+  padding-bottom: 27px;
 }
-.header-menu {
+.header-list {
   display: none;
 }
-.menu-soclinks {
+.header-menu-soclinks {
   display: none;
 }
 
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
-  .container {
-    max-width: 768px;
-    padding: 0 32px;
-  }
-  .header-container {
-    padding-top: 26px;
-    padding-bottom: 26px;
-  }
   .icon-menu {
     stroke-width: 3px;
   }
-  .header-logo {
+  .header-link-logo {
     font-size: 20px;
+    padding-top: 34px;
+    padding-bottom: 34px;
   }
-  .burger-icon {
+  .header-burger-icon {
     width: 40px;
     height: 40px;
+  }
+  .header-mob-menu {
+    padding-top: 26px;
+    padding-bottom: 25px;
   }
 }
 
 /* Styles for Desktop devices */
 @media only screen and (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-    padding: 0 65px;
-  }
-
-  .mob-menu {
+  .header-mob-menu {
     display: none;
   }
-  .menu-list-nav {
+  .header-link {
+    display: block;
+    position: relative;
     font-family: 'Gilroy', sans-serif;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.29;
     text-align: center;
     color: #0c0c0c;
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
-
-  .menu-list-nav::after {
-    content: '';
-    position: absolute;
-    width: 8px;
-    height: 8px;
-    left: 50%;
-    transform: translate(-50%);
-    bottom: -10px;
-    border-radius: 100px;
-    background-color: #3350e9;
-    opacity: 0;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
-  .menu-list-nav.current:hover:after,
-  .menu-list-nav.current:focus::after {
-    opacity: 1;
-  }
-
-  .menu-list-nav.current {
-    position: relative;
-  }
-
-  .header-container {
+  .header-link-logo {
     padding-top: 32px;
     padding-bottom: 32px;
   }
-  .header-menu {
+
+  .header-link::after {
+    content: '';
+    display: block;
+    position: relative;
+    width: 8px;
+    height: 8px;
+    left: 50%;
+    transform: translateX(-50%) scale(0);
+    bottom: -2px;
+    border-radius: 50%;
+    background-color: #3350e9;
+    opacity: 0;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .header-link:hover:after,
+  .header-link:focus::after {
+    transform: translateX(-50%) scale(1);
+    opacity: 1;
+  }
+
+  .header-list {
     display: flex;
     gap: 40px;
   }
-  .nav {
+  .header-nav {
     display: flex;
     align-items: center;
     justify-content: center;
   }
-  .social-link {
+  .header-social-list {
     display: flex;
     gap: 10px;
   }
-  .menu-soclinks {
+  .header-menu-soclinks {
     display: flex;
     align-items: center;
   }
 
-  .icons {
+  .header-soc-icons {
     display: block;
     fill: #0c0c0c;
     opacity: 0.8;
   }
-  .soc-list {
+
+  .header-soc-list-item {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -151,14 +142,15 @@
     box-sizing: border-box;
     padding: 0;
     cursor: pointer;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
-  .soc-list:hover,
-  .soc-list:focus {
+  .header-soc-list-item:hover,
+  .header-soc-list-item:focus {
     border: 1px solid rgba(51, 80, 233, 0.1);
   }
-  .soc-list:hover .icons,
-  .soc-list:focus .icons {
+  .header-soc-list-item:hover .header-soc-icons,
+  .headre-soc-list-item:focus .header-soc-icons {
     fill: #3350e9;
   }
 }
