--- a/src/css/base.css
+++ b/src/css/base.css
@@ -6,10 +6,12 @@
 
 body {
   background-color: #fbfbfb;
-  min-width: 100vw;
-  min-height: 100vh;
+  /* min-width: 100vw;
+  min-height: 100vh; */
   margin: 0;
+  padding: 0;
   color: #0c0c0c;
+  /* overflow-x: hidden; */
 }
 
 .visually-hidden {
