--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,94 @@
-<footer class="footer">
-  <div class="container"></div>
+<footer class="footer" id="footer">
+  <div class="container">
+    <div class="footer-wrap">
+      <div class="footer-top-wrap">
+        <div class="footer-soc-wrap">
+          <a class="footer-logo" href="./index.html">watchcharm</a>
+          <ul class="footer-soc-list">
+            <li class="footer-soc-item">
+              <a
+                class="footer-soc-link"
+                target="_blank"
+                aria-label="facebook-link"
+                href="https://www.facebook.com/goITclub/"
+                ><svg class="footer-soc-icon" width="18" height="18">
+                  <use href="./img/icons.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li class="footer-soc-item">
+              <a
+                class="footer-soc-link"
+                target="_blank"
+                aria-label="instagram-link"
+                href="https://www.instagram.com/goitclub/"
+                ><svg class="footer-soc-icon" width="18" height="18">
+                  <use href="./img/icons.svg#icon-instagram"></use></svg
+              ></a>
+            </li>
+            <li class="footer-soc-item">
+              <a
+                class="footer-soc-link"
+                target="_blank"
+                aria-label="youtube-link"
+                href="https://www.youtube.com/c/GoIT"
+                ><svg class="footer-soc-icon" width="18" height="18">
+                  <use href="./img/icons.svg#icon-youtube"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
+        <address class="footer-contact">
+          <a class="footer-contact-tel" href="tel:+380684439426"
+            >+380 (68) 443-94-26</a
+          >
+        </address>
+        <p class="footer-title">
+          Have the time of your life with our watches: where high-class
+          craftsmanship meets impeccable design
+        </p>
+      </div>
+      <div class="footer-navigation-wrap">
+        <nav class="footer-navigation">
+          <ul class="footer-navigation-list">
+            <li class="footer-navigation-item">
+              <a class="footer-navigation-link" href="#hero">Home</a>
+            </li>
+            <li class="footer-navigation-item">
+              <a class="footer-navigation-link" href="#about">About Us</a>
+            </li>
+            <li class="footer-navigation-item">
+              <a class="footer-navigation-link" href="#catalog">Catalog</a>
+            </li>
+            <li class="footer-navigation-item">
+              <a class="footer-navigation-link" href="#sale">Sale</a>
+            </li>
+            <li class="footer-navigation-item">
+              <a class="footer-navigation-link" href="#reviews">Reviews</a>
+            </li>
+            <li class="footer-navigation-item">
+              <a class="footer-navigation-link" href="#contact-us"
+                >Contact Us</a
+              >
+            </li>
+          </ul>
+        </nav>
+        <p class="footer-navigation-text">
+          1678 S. Pioneer Road Salt Lake City UT 84104
+        </p>
+      </div>
+      <div class="footer-bottom-wrap">
+        <p class="footer-bottom-text">
+          ©2023 The Watch Spot. All rights reserved.
+        </p>
+        <ul class="footer-bottom-list">
+          <li class="footer-bottom-item">
+            <a class="footer-bottom-link" href="">Terms of Service</a>
+          </li>
+          <li class="footer-bottom-item">
+            <a class="footer-bottom-link" href="">Privacy Policy</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </footer>
