--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -51,7 +51,7 @@
             target="_blank"
             class="header-icons-item"
             ><svg class="header-soc-icons" width="20" height="20">
-              <use href="../img/icons.svg#icon-youtube"></use>
+              <use href="./img/icons.svg#icon-youtube"></use>
             </svg>
           </a>
         </li>
