--- a/src/css/advertisement.css
+++ b/src/css/advertisement.css
@@ -50,7 +50,8 @@
   width: 160px;
   height: 48px;
   background-color: transparent;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @media only screen and (min-width: 768px) {
