--- a/src/partials/advertisement.html
+++ b/src/partials/advertisement.html
@@ -1,5 +1,5 @@
 <section id="advertisement" class="advertisement">
-  <h2 class="visually-hidden">Hero</h2>
+  <h2 class="visually-hidden">Advertisement</h2>
   <div class="container">
     <div class="advertisement-wrapper">
       <h3 class="advertisement-title">
