--- a/src/partials/contact-us.html
+++ b/src/partials/contact-us.html
@@ -1,3 +1,86 @@
-<section class="contact-us">
-  <div class="container"></div>
+<section class="contact-us" id="contact-us">
+  <div class="container contact-us">
+    <h2 class="contact-title">Contact Us</h2>
+    <div class="contact-wrapper">
+      <div class="contact">
+        <p class="contact-text">
+          Please use the form below to contact us. Enter your name, email,
+          phone, and message and we'll get back to you shortly.
+        </p>
+        <form class="contact-form">
+          <div class="contact-field">
+            <label for="user-name" class="contact-label"></label>
+            <div class="input-wrap">
+              <input
+                name="user-name"
+                id="user-name"
+                class="contact-input contact-textarea"
+                placeholder="Name"
+                required
+              />
+            </div>
+          </div>
+          <div class="contact-field">
+            <label for="user-email" class="contact-label"></label>
+            <div class="input-wrap">
+              <input
+                name="user-email"
+                id="user-email"
+                class="contact-input contact-textarea"
+                placeholder="Email"
+                pattern="([A-Za-z0-9_.-]+)@([A-Za-z0-9_.-]+)\.([A-Za-z]{2,8})"
+                required
+              />
+            </div>
+          </div>
+          <div class="contact-field">
+            <label for="user-phone" class="contact-label"></label>
+            <div class="input-wrap">
+              <input
+                name="user-phone"
+                id="user-phone"
+                class="contact-input contact-textarea"
+                placeholder="+380"
+                pattern="^\+\d{3}-\d{2}-\d{3}-\d{2}-\d{2}$"
+                required
+              />
+            </div>
+          </div>
+          <div class="comment-field">
+            <label for="user-comment" class="comment-label"></label>
+            <textarea
+              name="user-comment"
+              id="user-comment"
+              class="comment-input comment-textarea"
+              placeholder="Comment"
+            ></textarea>
+          </div>
+          <button type="submit" class="contact-btn">Send</button>
+        </form>
+      </div>
+      <div class="contact-pctr">
+        <picture class="contact-picture">
+          <source
+            srcset="./img/contact-us/contact-us-desk-min.jpg 1x, ./img/contact-us/contact-us-desk@2x-min.jpg 2x"
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="./img/contact-us/contact-us-tab-min.jpg 1x, ./img/contact-us/contact-us-tab@2x-min.jpg 2x"
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="./img/contact-us/contact-us-mob-min.jpg 1x, ./img/contact-us/contact-us-mob@2x-min.jpg 2x"
+            media="(max-width: 767px)"
+          />
+          <img
+            class="contact-img"
+            src="./img/contact-us/contact-us-mob-min.jpg"
+            
+            alt="The Watch"
+          />
+        </picture>
+      </div>
+    </div>
+  </div>
 </section>
+<script src="main.js"></script>
