--- a/src/css/header.css
+++ b/src/css/header.css
@@ -149,3 +149,119 @@
     fill: #3350e9;
   }
 }
+
+/* --------------------MODAL------------------------ */
+
+.mob-menu {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  width: 100%;
+  height: 100%;
+  background-image: url(../img/modal/menu-mob-bg-min.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  position: fixed;
+  top: 0;
+  z-index: 10;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  /* justify-content: center; */
+  align-items: center;
+  padding: 240px 40px 40px 40px;
+}
+
+@media screen and (min-resolution: 2x) {
+  .mob-menu {
+    background-image: url(../img/modal/menu-mob-bg@2x-min.jpg);
+  }
+}
+
+.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.modal-close-btn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  width: 34px;
+  height: 34px;
+  padding: 0;
+  background-color: transparent;
+  border: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.mob-menu-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  align-items: center;
+}
+
+.mob-menu-link {
+  font-size: 14px;
+  line-height: 1.29;
+  color: #fbfbfb;
+  font-weight: 500;
+  position: relative;
+  display: block;
+}
+
+.mob-menu-link::after {
+  content: '';
+  width: 8px;
+  height: 8px;
+  background-color: #3350e9;
+  border-radius: 50%;
+  position: absolute;
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-50%) scale(0);
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-menu-link:hover::after,
+.mob-menu-link:focus::after {
+  transform: translateX(-50%) scale(1);
+  opacity: 1;
+  bottom: -10px;
+}
+
+@media screen and (min-width: 768px) {
+  .mob-menu {
+    background-image: url(../img/modal/menu-tab-bg-min.jpg);
+    /* padding: 310px 101px 50px 101px; */
+  }
+
+  @media screen and (min-resolution: 2x) {
+    .mob-menu {
+      background-image: url(../img/modal/menu-tab-bg@2x-min.jpg);
+    }
+  }
+
+  .mob-menu-wrapper {
+    gap: 32px;
+  }
+
+  .mob-menu .footer-soc-link {
+    width: 36px;
+    height: 36px;
+  }
+
+  .mob-menu .footer-soc-icon {
+    width: 20px;
+    height: 20px;
+  }
+}
