--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -63,4 +63,58 @@
       </svg>
     </button>
   </div>
+
+  <div class="mob-menu">
+    <button class="modal-close-btn" type="button">
+      <svg class="close-icon" width="34" height="34">
+        <use href="./img/icons.svg#icon-x"></use>
+      </svg>
+    </button>
+
+    <nav class="mob-menu-nav">
+      <ul class="mob-menu-wrapper">
+        <li>
+          <a class="mob-menu-link" href="#">Home</a>
+        </li>
+        <li><a class="mob-menu-link" href="#about">About Us</a></li>
+        <li><a class="mob-menu-link" href="#catalog">Catalog</a></li>
+        <li><a class="mob-menu-link" href="#sale">Sale</a></li>
+        <li><a class="mob-menu-link" href="#reviews">Reviews</a></li>
+        <li><a class="mob-menu-link" href="#contact-us">Contact Us</a></li>
+      </ul>
+    </nav>
+
+    <ul class="footer-soc-list">
+      <li class="footer-soc-item">
+        <a
+          class="footer-soc-link"
+          target="_blank"
+          aria-label="facebook-link"
+          href="https://www.facebook.com/goITclub/"
+          ><svg class="footer-soc-icon" width="18" height="18">
+            <use href="./img/icons.svg#icon-facebook"></use></svg
+        ></a>
+      </li>
+      <li class="footer-soc-item">
+        <a
+          class="footer-soc-link"
+          target="_blank"
+          aria-label="instagram-link"
+          href="https://www.instagram.com/goitclub/"
+          ><svg class="footer-soc-icon" width="18" height="18">
+            <use href="./img/icons.svg#icon-instagram"></use></svg
+        ></a>
+      </li>
+      <li class="footer-soc-item">
+        <a
+          class="footer-soc-link"
+          target="_blank"
+          aria-label="youtube-link"
+          href="https://www.youtube.com/c/GoIT"
+          ><svg class="footer-soc-icon" width="18" height="18">
+            <use href="./img/icons.svg#icon-youtube"></use></svg
+        ></a>
+      </li>
+    </ul>
+  </div>
 </header>
