sale section rebuild

--- a/src/partials/sale.html
+++ b/src/partials/sale.html
@@ -1,197 +1,156 @@
 <section id="sale" class="sale-section">
   <div class="container">
-    <h2 class="sale-header">Sale</h2>
-    <div class="sale-container">
-      <div class="sale-sub-container-one">
-        <ul class="sale-sbc-one-list">
-          <li class="sale-sbc-one-list-item">
+    <h1 class="sale-title">Sale</h1>
+    <div class="sale-content-wrap">
+      <div class="sale-top-wrap">
+        <ul class="sale-clock-list">
+          <li class="sale-clock-item">
             <picture>
               <source
+                media="(min-width: 768px )"
                 srcset="
                   ./img/sale/sale-desk-1-min.png    1x,
                   ./img/sale/sale-desk-1@2x-min.png 2x
                 "
-                media="(min-width: 1280px)"
               />
               <source
+                media="(max-width: 768px)"
                 srcset="
-                  ./img/sale/sale-desk-1-min.png    1x,
-                  ./img/sale/sale-desk-1@2x-min.png 2x
-                "
-                media="(min-width: 768px)"
-              />
-              <source
-                srcset="
-                  ./img/sale/sale-mob-1-min.png    1x,
+                  ./img/sale/sale-mob-1-min.png,
                   ./img/sale/sale-mob-1@2x-min.png 2x
                 "
-                media="(max-width: 767px)"
               />
               <img
-                class="sale-sbc-one-list-item-img"
                 src="./img/sale/sale-mob-1-min.png"
                 alt="Front part of the watches with its features"
               />
             </picture>
           </li>
-          <li class="sale-sbc-one-list-item">
+          <li class="sale-clock-item">
             <picture>
               <source
+                media="(min-width: 768px )"
                 srcset="
                   ./img/sale/sale-desk-2-min.png    1x,
                   ./img/sale/sale-desk-2@2x-min.png 2x
                 "
-                media="(min-width: 1280px)"
               />
               <source
-                srcset="
-                  ./img/sale/sale-desk-2-min.png    1x,
-                  ./img/sale/sale-desk-2@2x-min.png 2x
-                "
-                media="(min-width: 768px)"
-              />
-              <source
+                media="(max-width: 768px)"
                 srcset="
                   ./img/sale/sale-mob-2-min.png    1x,
                   ./img/sale/sale-mob-2@2x-min.png 2x
                 "
-                media="(max-width: 767px)"
               />
               <img
-                class="sale-sbc-one-list-item-img"
                 src="./img/sale/sale-mob-2-min.png"
-                alt="Front part of the watches with sleep monitoring features"
+                alt="Front part of the watches with its features"
               />
             </picture>
           </li>
-          <li class="sale-sbc-one-list-item">
+          <li class="sale-clock-item">
             <picture>
               <source
+                media="(min-width: 768px )"
                 srcset="
                   ./img/sale/sale-desk-3-min.png    1x,
                   ./img/sale/sale-desk-3@2x-min.png 2x
                 "
-                media="(min-width: 1280px)"
               />
               <source
-                srcset="
-                  ./img/sale/sale-desk-3-min.png    1x,
-                  ./img/sale/sale-desk-3@2x-min.png 2x
-                "
-                media="(min-width: 768px)"
-              />
-              <source
+                media="(max-width: 768px)"
                 srcset="
                   ./img/sale/sale-mob-3-min.png    1x,
                   ./img/sale/sale-mob-3@2x-min.png 2x
                 "
-                media="(max-width: 767px)"
               />
               <img
-                class="sale-sbc-one-list-item-img"
                 src="./img/sale/sale-mob-3-min.png"
-                alt="Side part of the watches"
+                alt="Front part of the watches with its features"
               />
             </picture>
           </li>
-          <li class="sale-sbc-one-list-item">
+          <li class="sale-clock-item">
             <picture>
               <source
+                media="(min-width: 768px )"
                 srcset="
                   ./img/sale/sale-desk-4-min.png    1x,
                   ./img/sale/sale-desk-4@2x-min.png 2x
                 "
-                media="(min-width: 1280px)"
               />
               <source
-                srcset="
-                  ./img/sale/sale-desk-4-min.png    1x,
-                  ./img/sale/sale-desk-4@2x-min.png 2x
-                "
-                media="(min-width: 768px)"
-              />
-              <source
+                media="(max-width: 768px)"
                 srcset="
                   ./img/sale/sale-mob-4-min.png    1x,
                   ./img/sale/sale-mob-4@2x-min.png 2x
                 "
-                media="(max-width: 767px)"
               />
               <img
-                class="sale-sbc-one-list-item-img"
                 src="./img/sale/sale-mob-4-min.png"
-                alt="Back part of the watches"
+                alt="Front part of the watches with its features"
               />
             </picture>
           </li>
         </ul>
-      </div>
-      <div class="sale-sub-container-two">
-        <picture>
+        <picture class="sale-big-clock-wrap">
           <source
+            class="sale-big-img"
+            media="(min-width: 768px )"
             srcset="
               ./img/sale/sale-desk-5-min.png    1x,
               ./img/sale/sale-desk-5@2x-min.png 2x
             "
-            media="(min-width: 1280px)"
           />
           <source
-            srcset="
-              ./img/sale/sale-desk-5-min.png    1x,
-              ./img/sale/sale-desk-5@2x-min.png 2x
-            "
-            media="(min-width: 768px)"
-          />
-          <source
+            class="sale-big-img"
+            media="(max-width: 768px)"
             srcset="
               ./img/sale/sale-mob-5-min.png    1x,
               ./img/sale/sale-mob-5@2x-min.png 2x
             "
-            media="(max-width: 767px)"
           />
           <img
-            class="sale-sbc-two-img"
+            class="sale-big-img"
             src="./img/sale/sale-mob-5-min.png"
-            alt="Front side of the watch"
+            alt="Front part of the watches with its features"
           />
         </picture>
       </div>
-      <div class="sale-sub-container-three">
-        <h3 class="sale-sbc-three-header">
-          MARQ® Commander (Gen 2) - Carbon Edition
-        </h3>
-        <p class="sale-sbc-three-tag-text">Product tag: 706587</p>
-        <div class="sale-sbc-three-price-wrap">
-          <div class="sale-sbc-three-price-one-wrap">
-            <p class="sale-sbc-three-price-one">€1500</p>
+      <div class="sale-bottom-wrap">
+        <h3 class="sale-subtitle">MARQ® Commander (Gen 2) - Carbon Edition</h3>
+        <p class="sale-top-text">Product tag: 706587</p>
+        <div class="sale-price-wrap">
+          <div class="sale-price-btn">
+            <p class="sale-price-btn-text">€1500</p>
           </div>
-          <p class="sale-sbc-three-price-two">€3000</p>
+          <p class="sale-price-text">€3000</p>
         </div>
-        <p class="sale-sbc-three-main-text">
+        <p class="sale-center-text">
           The Garmin MARQ Commander Gen 2 Carbon Edition is a modern smartwatch
           for adventurers that takes materials and features to the next level.
           The body of the watch is made of very durable Fused Carbon Fiber
           material and has a precise AMOLED touch screen. The sensitive touch
           screen is complemented by buttons that can be used in any conditions.
         </p>
-        <ul class="sale-sbc-three-list">
-          <li class="sale-sbc-three-list-item">
-            <p class="sale-sbc-three-list-item-text">Fused carbon fiber</p>
+        <ul class="sale-bottom-list">
+          <li class="sale-bottom-item">
+            <p class="sale-bottom-text">Fused carbon fiber</p>
           </li>
-          <li class="sale-sbc-three-list-item">
-            <p class="sale-sbc-three-list-item-text">Grade-5 Titanuim</p>
+          <li class="sale-bottom-item">
+            <p class="sale-bottom-text">Grade-5 Titanuim</p>
           </li>
-          <li class="sale-sbc-three-list-item">
-            <p class="sale-sbc-three-list-item-text">Athlete</p>
+          <li class="sale-bottom-item">
+            <p class="sale-bottom-text">Athlete</p>
           </li>
-          <li class="sale-sbc-three-list-item">
-            <p class="sale-sbc-three-list-item-text">Golfer</p>
+          <li class="sale-bottom-item">
+            <p class="sale-bottom-text">Golfer</p>
           </li>
-          <li class="sale-sbc-three-list-item">
-            <p class="sale-sbc-three-list-item-text">Commander</p>
+          <li class="sale-bottom-item">
+            <p class="sale-bottom-text">Commander</p>
           </li>
-          <li class="sale-sbc-three-list-item">
-            <p class="sale-sbc-three-list-item-text">Adventurer</p>
+          <li class="sale-bottom-item">
+            <p class="sale-bottom-text">Adventurer</p>
           </li>
         </ul>
       </div>
