--- a/src/css/sale.css
+++ b/src/css/sale.css
@@ -1,304 +1,207 @@
-/* BEGINNING */
-
 .sale-section {
   padding-bottom: 60px;
 }
-
-.sale-header {
-  font-family: 'Gilroy', sans-serif;
+.sale-title {
   font-weight: 600;
   font-size: 32px;
   line-height: 1;
   letter-spacing: -0.02em;
   color: #0c0c0c;
-  display: block;
-  margin-bottom: 25px;
+  margin-bottom: 24px;
 }
 
-.sale-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-}
-
-.sale-sbc-one-list {
+.sale-clock-list {
   display: flex;
   gap: 5px;
+  margin-bottom: 20px;
 }
-
-.sale-sbc-one-list-item {
+.sale-clock-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border: 1px solid rgba(12, 12, 12, 0.05);
   border-radius: 16px;
-  padding: 13px 14px;
+  width: 80px;
+  height: 80px;
+  background-color: #f3f3f3;
+  flex-basis: calc((100% - 15px) / 4);
+}
+.sale-big-clock-wrap {
   display: flex;
-  height: auto;
   justify-content: center;
   align-items: center;
-  background-color: #f3f3f3;
-}
-
-.sale-sub-container-two {
   border: 1px solid rgba(12, 12, 12, 0.05);
   border-radius: 30px;
-  width: 100%;
+  max-width: 335px;
   height: 385px;
   background-color: #f3f3f3;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  margin-bottom: 20px;
 }
 
-.sale-sub-container-three {
+.sale-bottom-wrap {
   padding: 48px 28px;
-  border-radius: 30px;
-  width: 100%;
   background-color: #3350e9;
+  border-radius: 30px;
 }
-
-.sale-sbc-three-header {
+.sale-subtitle {
   font-weight: 600;
   font-size: 24px;
   line-height: 1.17;
   letter-spacing: -0.02em;
   color: #fbfbfb;
-  font-family: 'Gilroy', sans-serif;
-  display: block;
   margin-bottom: 10px;
 }
-
-.sale-sbc-three-tag-text {
+.sale-top-text {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.29;
   letter-spacing: -0.02em;
   color: rgba(251, 251, 251, 0.5);
-  font-family: 'Gilroy', sans-serif;
-  display: block;
   margin-bottom: 20px;
 }
-
-.sale-sbc-three-price-wrap {
+.sale-price-wrap {
   display: flex;
-  gap: 9px;
   align-items: center;
+  gap: 9px;
   margin-bottom: 28px;
 }
-
-.sale-sbc-three-price-one {
+.sale-price-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+  background-color: rgba(251, 251, 251, 0.1);
+  width: 68px;
+  height: 32px;
+}
+.sale-price-btn-text {
   font-weight: 600;
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: -0.02em;
   color: #fbfbfb;
-  font-family: 'Gilroy', sans-serif;
 }
-
-.sale-sbc-three-price-two {
+.sale-price-text {
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.7;
+  line-height: 1.17;
   letter-spacing: -0.02em;
   text-decoration: line-through;
   color: rgba(251, 251, 251, 0.5);
-  font-family: 'Gilroy', sans-serif;
 }
-
-.sale-sbc-three-price-one-wrap {
-  border-radius: 8px;
-  width: 68px;
-  height: 32px;
-  background-color: rgba(251, 251, 251, 0.1);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.sale-sbc-three-main-text {
+.sale-center-text {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.29;
   letter-spacing: -0.02em;
   color: rgba(251, 251, 251, 0.7);
-  display: block;
   margin-bottom: 28px;
 }
-
-.sale-sbc-three-list {
+.sale-bottom-list {
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
 }
-
-.sale-sbc-three-list-item {
+.sale-bottom-item {
   border: 1px solid rgba(251, 251, 251, 0.2);
   border-radius: 8px;
-  height: 32px;
-  padding-right: 12px;
-  padding-left: 12px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  padding: 8px 12px;
 }
-
-.sale-sbc-three-list-item-text {
+.sale-bottom-text {
   font-weight: 500;
   font-size: 12px;
   line-height: 1.33;
   color: #fbfbfb;
-  font-family: 'Gilroy', sans-serif;
 }
-
-/* ------------------------------------------------------- */
-
-/* MOBILE ADAPTATION */
-
-@media screen and (min-width: 375px) {
-  .sale-sbc-three-list {
-    max-width: 375px;
-  }
-
-  .sale-sbc-one-list-item {
-    height: 80px;
-    width: 80px;
-    padding: 0;
-  }
-
-  .sale-sub-container-two {
-    max-width: 375px;
-  }
-
-  .sale-sbc-two-img {
-    width: 235px;
-    height: 285px;
-  }
-
-  .sale-sbc-one-list-item-img {
-    width: 52px;
-    height: 54px;
-  }
-
-  .sale-sub-container-three {
-    max-width: 375px;
-  }
-}
-
-/* ------------------------------------------------------- */
-
-/* TABLET ADAPTATION */
-
-@media screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .sale-section {
     padding-bottom: 80px;
   }
-
-  .sale-header {
-    margin-bottom: 40px;
+  .sale-title {
     font-size: 48px;
     line-height: 0.92;
+    margin-bottom: 40px;
   }
-
-  .sale-container {
-    gap: 40px 20px;
+  .sale-big-clock-wrap {
+    margin-bottom: unset;
   }
-
-  .sale-sbc-one-list {
+  .sale-clock-list {
+    margin-bottom: unset;
     flex-direction: column;
     gap: 10px;
-    width: 132px;
   }
-
-  .sale-sbc-one-list-item-img {
-    width: 96px;
-    height: 100px;
-  }
-
-  .sale-sbc-one-list-item {
+  .sale-clock-item {
+    border-radius: 20px;
     width: 132px;
     height: 132px;
+    flex-basis: unset;
   }
-
-  .sale-sub-container-two {
+  .sale-big-clock-wrap {
+    border-radius: 50px;
     max-width: 552px;
-    height: auto;
+    height: 558px;
+    flex-grow: 1;
   }
-
-  .sale-sbc-two-img {
-    width: 328px;
-    height: 398px;
+  .sale-top-wrap {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
   }
-
-  .sale-sub-container-three {
-    max-width: 704px;
+  .sale-bottom-wrap {
     padding: 60px;
+    border-radius: 50px;
   }
-
-  .sale-sbc-three-header {
-    max-width: 389px;
-    font-weight: 600;
+  .sale-subtitle {
     font-size: 32px;
     line-height: 1.13;
+    max-width: 436px;
   }
-
-  .sale-sbc-three-price-one {
+  .sale-price-wrap {
+    margin-bottom: 30px;
+  }
+  .sale-price-btn {
+    width: 78px;
+    height: 32px;
+  }
+  .sale-price-btn-text {
     font-size: 20px;
     line-height: 1;
   }
-
-  .sale-sbc-three-main-text {
+  .sale-center-text {
     font-size: 16px;
     line-height: 1.25;
-    max-width: 584px;
+    margin-bottom: 40px;
   }
-
-  .sale-sbc-three-list-item {
-    height: 34px;
+  .sale-bottom-list {
+    max-width: 398px;
   }
-
-  .sale-sbc-three-list-item-text {
+  .sale-bottom-text {
     font-size: 14px;
     line-height: 1.29;
   }
-
-  .sale-sbc-three-list {
-    min-width: 398px;
-  }
-
-  .sale-sbc-three-price-wrap {
-    margin-bottom: 30px;
-  }
-
-  .sale-sbc-three-main-text {
-    margin-bottom: 40px;
-  }
-
-  .sale-sbc-three-price-one-wrap {
-    width: 78px;
-  }
 }
-
-/* ------------------------------------------------------- */
-
-/* DESKTOP ADAPTATION */
-
-@media screen and (min-width: 1280px) {
+@media only screen and (min-width: 1280px) {
   .sale-section {
     padding-bottom: 100px;
   }
-
-  .sale-container {
-    gap: 0;
+  .sale-content-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
-
-  .sale-sub-container-one {
-    margin-right: 20px;
+  .sale-top-wrap {
+    margin-bottom: unset;
+    justify-content: center;
+    gap: 20px;
   }
-
-  .sale-sub-container-two {
-    max-width: 428px;
-    margin-right: 40px;
+  .sale-big-clock-wrap {
+    width: 428px;
+    flex-grow: unset;
   }
-
-  .sale-sub-container-three {
+  .sale-bottom-wrap {
     max-width: 530px;
+  }
+  .sale-subtitle {
+    max-width: 389px;
   }
 }
