small contact fix + add js

--- a/src/partials/contact-us.html
+++ b/src/partials/contact-us.html
@@ -1,5 +1,5 @@
 <section class="contact-us" id="contact-us">
-  <div class="container contact-us">
+  <div class="container">
     <h2 class="contact-title">Contact Us</h2>
     <div class="contact-wrapper">
       <div class="contact">
@@ -61,21 +61,29 @@
       <div class="contact-pctr">
         <picture class="contact-picture">
           <source
-            srcset="./img/contact-us/contact-us-desk-min.jpg 1x, ./img/contact-us/contact-us-desk@2x-min.jpg 2x"
+            srcset="
+              ./img/contact-us/contact-us-desk-min.jpg    1x,
+              ./img/contact-us/contact-us-desk@2x-min.jpg 2x
+            "
             media="(min-width: 1280px)"
           />
           <source
-            srcset="./img/contact-us/contact-us-tab-min.jpg 1x, ./img/contact-us/contact-us-tab@2x-min.jpg 2x"
+            srcset="
+              ./img/contact-us/contact-us-tab-min.jpg    1x,
+              ./img/contact-us/contact-us-tab@2x-min.jpg 2x
+            "
             media="(min-width: 768px)"
           />
           <source
-            srcset="./img/contact-us/contact-us-mob-min.jpg 1x, ./img/contact-us/contact-us-mob@2x-min.jpg 2x"
-            media="(max-width: 767px)"
+            srcset="
+              ./img/contact-us/contact-us-mob-min.jpg    1x,
+              ./img/contact-us/contact-us-mob@2x-min.jpg 2x
+            "
+            media="(max-width: 768px)"
           />
           <img
             class="contact-img"
             src="./img/contact-us/contact-us-mob-min.jpg"
-            
             alt="The Watch"
           />
         </picture>
