--- a/src/css/contact-us.css
+++ b/src/css/contact-us.css
@@ -1,12 +1,11 @@
 .contact-us {
-  /* padding-bottom: 60px; */
+  padding-bottom: 60px;
 }
 
 .contact-title {
   font-weight: 600;
   font-size: 32px;
 
-  
   line-height: 1;
   letter-spacing: -0.02em;
   color: #0c0c0c;
@@ -17,9 +16,7 @@
 .contact-text {
   font-weight: 500;
   font-size: 14px;
-
-  
-  line-height: 1.28571;
+  line-height: 1.29;
   letter-spacing: -0.02em;
   color: rgba(12, 12, 12, 0.7);
   margin-bottom: 28px;
@@ -59,7 +56,6 @@
   font-weight: 400;
   font-size: 16px;
 
-  
   line-height: 1.25;
   color: #0c0c0c;
   overflow-y: hidden;
@@ -67,7 +63,6 @@
 .comment-textarea::placeholder {
   font-size: 14px;
 
-  
   line-height: 1.28;
   color: #0c0c0c;
 }
@@ -141,44 +136,30 @@
 .contact-btn:hover {
   background-color: #1f3cd4;
 }
-.contact-pctr {
-   
-}
+
 .contact-wrapper {
   display: flex;
   flex-direction: column;
-  margin-bottom: 60px;
 }
 
 @media only screen and (min-width: 768px) {
-  .container {
-    max-width: 768px;
-    padding: 0 32px;
+  .contact-us {
+    padding-bottom: 80px;
   }
-    .contact-wrapper {
-      margin-bottom: 80px;
-    }
   .contact-title {
     margin-bottom: 40px;
     text-align: left;
     font-weight: 600;
     font-size: 48px;
 
-    
     line-height: 0.91;
     letter-spacing: -0.02em;
     color: #0c0c0c;
   }
   .contact-text {
     margin-bottom: 32px;
-    font-weight: 500;
     font-size: 16px;
-
-    
     line-height: 1.25;
-    letter-spacing: -0.02em;
-    color: rgba(12, 12, 12, 0.7);
-    text-align: center;
   }
   .contact-field {
     margin-bottom: 18px;
@@ -196,8 +177,7 @@
     color: #0c0c0c;
   }
   .contact-pctr {
-     width: 768px; 
-    
+    width: 768px;
   }
   .contact {
     background: #f3f3f3;
@@ -219,25 +199,17 @@
     min-width: 704px;
     height: 556px;
   }
-  @media screen and (min-resolution: 2dppx), (min-resolution: 192dpi) {
-    .contact-img {
-      
-    }
-  }
 }
 
-
 @media only screen and (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-    padding: 0 65px;
+  .contact-us {
+    padding-bottom: 100px;
   }
+
   .contact-wrapper {
     display: flex;
-    padding-bottom: 100px;
     flex-direction: row;
     gap: 40px;
-    margin-bottom: 0;
   }
   .contact-textarea {
     height: 52px;
@@ -269,13 +241,6 @@
   }
   .contact-pctr {
     margin-bottom: 0;
-     width: 1280px;
-    
+    width: 1280px;
   }
 }
-  @media screen and (min-resolution: 2dppx), (min-resolution: 192dpi) {
-    .contact-pctr {
-       
-    } 
-  }
-
