small fix reviews and contact

--- a/src/css/contact-us.css
+++ b/src/css/contact-us.css
@@ -177,7 +177,7 @@
     color: #0c0c0c;
   }
   .contact-pctr {
-    width: 768px;
+    /* width: 768px; */
   }
   .contact {
     background: #f3f3f3;
