--- a/src/css/header.css
+++ b/src/css/header.css
@@ -124,6 +124,7 @@
     display: block;
     fill: #0c0c0c;
     opacity: 0.8;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   .header-soc-list-item {
@@ -169,7 +170,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  /* justify-content: center; */
   align-items: center;
   padding: 240px 40px 40px 40px;
 }
