--- a/src/partials/advertisement.html
+++ b/src/partials/advertisement.html
@@ -7,9 +7,9 @@
         unique. Time is your style, and we reveal it.
       </h3>
 
-      <div class="advertisement-buttons">
-        <a href="#contact-us" class="advertisement-btn">Contact Us</a>
-      </div>
+      <!-- <div class="advertisement-buttons"> -->
+      <a href="#contact-us" class="advertisement-btn">Contact Us</a>
+      <!-- </div> -->
     </div>
   </div>
 </section>
