--- a/src/partials/sale.html
+++ b/src/partials/sale.html
@@ -1,6 +1,6 @@
 <section id="sale" class="sale-section">
   <div class="container">
-    <h1 class="sale-title">Sale</h1>
+    <h2 class="sale-title">Sale</h2>
     <div class="sale-content-wrap">
       <div class="sale-top-wrap">
         <ul class="sale-clock-list">
@@ -118,7 +118,9 @@
         </picture>
       </div>
       <div class="sale-bottom-wrap">
-        <h3 class="sale-subtitle">MARQ® Commander (Gen 2) - Carbon Edition</h3>
+        <h3 class="sale-subtitle">
+          MARQ&reg; Commander (Gen 2) - Carbon Edition
+        </h3>
         <p class="sale-top-text">Product tag: 706587</p>
         <div class="sale-price-wrap">
           <div class="sale-price-btn">
