--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,5 +1,6 @@
 .about {
-  padding-bottom: 60px;
+  padding-bottom: 30px;
+  padding-top: 30px;
 }
 
 .about-wrapper {
@@ -70,7 +71,8 @@
 
 @media only screen and (min-width: 768px) {
   .about {
-    padding-bottom: 80px;
+    padding-bottom: 40px;
+    padding-top: 40px;
   }
 
   .about-wrapper {
@@ -107,7 +109,8 @@
 
 @media only screen and (min-width: 1280px) {
   .about {
-    padding-bottom: 100px;
+    padding-bottom: 50px;
+    padding-top: 50px;
   }
 
   .about-img {
