--- a/src/css/header.css
+++ b/src/css/header.css
@@ -129,7 +129,7 @@
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
-  .header-soc-list-item {
+  .header-icons-item {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -143,12 +143,13 @@
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
-  .header-soc-list-item:hover,
-  .header-soc-list-item:focus {
+  .header-icons-item:hover,
+  .header-icons-item:focus {
     border: 1px solid rgba(51, 80, 233, 0.1);
   }
-  .header-soc-list-item:hover .header-soc-icons,
-  .headre-soc-list-item:focus .header-soc-icons {
+
+  .header-icons-item:hover .header-soc-icons,
+  .header-icons-item:focus .header-soc-icons {
     fill: #3350e9;
   }
 }
@@ -159,7 +160,7 @@
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  width: 100%;
+  max-width: 330px;
   height: 100%;
   background-image: url(../img/modal/menu-mob-bg-min.jpg);
   background-repeat: no-repeat;
@@ -167,6 +168,7 @@
   background-size: cover;
   position: fixed;
   top: 0;
+  right: 0;
   z-index: 10;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: flex;
