--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -1,5 +1,6 @@
 .reviews-section {
-  padding-bottom: 60px;
+  padding-bottom: 30px;
+  padding-top: 30px;
 }
 
 .reviews-title {
@@ -46,7 +47,6 @@
   align-items: center;
   justify-content: center;
   gap: 8px;
-  height: 118px;
   max-width: 263px;
 }
 .reviews-subtitle {
@@ -69,7 +69,8 @@
 
 @media only screen and (min-width: 768px) {
   .reviews-section {
-    padding-bottom: 80px;
+    padding-bottom: 40px;
+    padding-top: 40px;
   }
   .reviews-title {
     font-size: 48px;
@@ -102,7 +103,8 @@
 
 @media only screen and (min-width: 1280px) {
   .reviews-section {
-    padding-bottom: 100px;
+    padding-bottom: 50px;
+    padding-top: 50px;
   }
   .reviews-list {
     gap: 20px;
