--- a/src/css/sale.css
+++ b/src/css/sale.css
@@ -1,5 +1,6 @@
 .sale-section {
-  padding-bottom: 60px;
+  padding-bottom: 30px;
+  padding-top: 30px;
 }
 .sale-title {
   font-weight: 600;
@@ -35,7 +36,6 @@
   max-width: 335px;
   height: 385px;
   background-color: #f3f3f3;
-  margin-bottom: 20px;
 }
 
 .sale-bottom-wrap {
@@ -51,6 +51,11 @@
   color: #fbfbfb;
   margin-bottom: 10px;
 }
+
+.sale-top-wrap {
+  margin-bottom: 20px;
+}
+
 .sale-top-text {
   font-weight: 400;
   font-size: 14px;
@@ -115,7 +120,8 @@
 }
 @media only screen and (min-width: 768px) {
   .sale-section {
-    padding-bottom: 80px;
+    padding-bottom: 40px;
+    padding-top: 40px;
   }
   .sale-title {
     font-size: 48px;
@@ -144,7 +150,7 @@
   }
   .sale-top-wrap {
     display: flex;
-    justify-content: space-between;
+    gap: 20px;
     margin-bottom: 40px;
   }
   .sale-bottom-wrap {
@@ -182,12 +188,13 @@
 }
 @media only screen and (min-width: 1280px) {
   .sale-section {
-    padding-bottom: 100px;
+    padding-bottom: 50px;
+    padding-top: 50px;
   }
   .sale-content-wrap {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    gap: 40px;
   }
   .sale-top-wrap {
     margin-bottom: unset;
