--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -72,13 +72,17 @@
             </li>
           </ul>
         </nav>
-        <p class="footer-navigation-text">
+        <a
+          href="https://www.google.com/maps/place/Varex+Imaging+Visitor+Entrance/@40.7331327,-111.961614,18z/data=!4m6!3m5!1s0x8752f35bbcfb1369:0x260ab4842496c9e4!8m2!3d40.7332053!4d-111.9591313!16s%2Fg%2F1tcxvqmt?entry=ttu&g_ep=EgoyMDI1MDQyMy4wIKXMDSoASAFQAw%3D%3D"
+          class="footer-navigation-text"
+          target="_blank"
+        >
           1678 S. Pioneer Road Salt Lake City UT 84104
-        </p>
+        </a>
       </div>
       <div class="footer-bottom-wrap">
         <p class="footer-bottom-text">
-          ©2023 The Watch Spot. All rights reserved.
+          &copy;2023 The Watch Spot. All rights reserved.
         </p>
         <ul class="footer-bottom-list">
           <li class="footer-bottom-item">
